--- a/www/app/apps/leads/extra.html
+++ b/www/app/apps/leads/extra.html
@@ -34,22 +34,22 @@
       <!--label ng-if="e.attribute_name" ng-show="leadform.attributes[e.attribute_name].$invalid && (leadform.attributes[e.attribute_name].$dirty || submitted)" class="item no-border input-error">
       ערך לא תקין
     </label-->
-      <div ng-if="e.attribute_name" ng-show="leadform.attributes[e.attribute_name].$invalid && submitted">
+      <div ng-if="e.attribute_name" ng-show="forms.leadform.attributes[e.attribute_name].$invalid && submitted">
         <label class="item no-border input-error" ng-if="e.message">{{e.message}}</label>
         <div ng-if="!e.message">
-          <label class="item no-border input-error" ng-if="leadform.attributes[e.attribute_name].$error.required">יש להזין ערך</label>
-          <span class="item no-border input-error" ng-if="leadform.attributes[e.attribute_name].$error.min">ערך נמוך מדי</label>
-          <label class="item no-border input-error" ng-if="leadform.attributes[e.attribute_name].$error.max">ערך גבוה מדי</label>
-          <label class="item no-border input-error" ng-if="leadform.attributes[e.attribute_name].$error.email">אימייל לא תקין</label>
-          <label class="item no-border input-error" ng-if="leadform.attributes[e.attribute_name].$error.maxlength">אורך גדול מדי</label>
-          <label class="item no-border input-error" ng-if="leadform.attributes[e.attribute_name].$error.minlength">אורך קטן מדי</label>
-          <label class="item no-border input-error" ng-if="leadform.attributes[e.attribute_name].$error.number">יש להזין ספרות בלבד</label>
-          <label class="item no-border input-error" ng-if="leadform.attributes[e.attribute_name].$error.pattern">הערך שהזנתם אינו תקין</label>
-          <label class="item no-border input-error" ng-if="leadform.attributes[e.attribute_name].$error.url">כתובת אינה תקינה</label>
-          <label class="item no-border input-error" ng-if="leadform.attributes[e.attribute_name].$error.date">תאריך אינו תקין</label>
-          <label class="item no-border input-error" ng-if="leadform.attributes[e.attribute_name].$error.time">השעה אינה תקינה</label>
-          <label class="item no-border input-error" ng-if="leadform.attributes[e.attribute_name].$error.week">ערך השבוע אינו תקין</label>
-          <label class="item no-border input-error" ng-if="leadform.attributes[e.attribute_name].$error.month">ערך החודש אינו תקין</label>
+          <label class="item no-border input-error" ng-if="forms.leadform.attributes[e.attribute_name].$error.required">יש להזין ערך</label>
+          <span class="item no-border input-error" ng-if="forms.leadform.attributes[e.attribute_name].$error.min">ערך נמוך מדי</label>
+          <label class="item no-border input-error" ng-if="forms.leadform.attributes[e.attribute_name].$error.max">ערך גבוה מדי</label>
+          <label class="item no-border input-error" ng-if="forms.leadform.attributes[e.attribute_name].$error.email">אימייל לא תקין</label>
+          <label class="item no-border input-error" ng-if="forms.leadform.attributes[e.attribute_name].$error.maxlength">אורך גדול מדי</label>
+          <label class="item no-border input-error" ng-if="forms.leadform.attributes[e.attribute_name].$error.minlength">אורך קטן מדי</label>
+          <label class="item no-border input-error" ng-if="forms.leadform.attributes[e.attribute_name].$error.number">יש להזין ספרות בלבד</label>
+          <label class="item no-border input-error" ng-if="forms.leadform.attributes[e.attribute_name].$error.pattern">הערך שהזנתם אינו תקין</label>
+          <label class="item no-border input-error" ng-if="forms.leadform.attributes[e.attribute_name].$error.url">כתובת אינה תקינה</label>
+          <label class="item no-border input-error" ng-if="forms.leadform.attributes[e.attribute_name].$error.date">תאריך אינו תקין</label>
+          <label class="item no-border input-error" ng-if="forms.leadform.attributes[e.attribute_name].$error.time">השעה אינה תקינה</label>
+          <label class="item no-border input-error" ng-if="forms.leadform.attributes[e.attribute_name].$error.week">ערך השבוע אינו תקין</label>
+          <label class="item no-border input-error" ng-if="forms.leadform.attributes[e.attribute_name].$error.month">ערך החודש אינו תקין</label>
     </div>
   </div>
     </ng-switch>
