--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -9,13 +9,10 @@
     </div>
   </ion-nav-title>
   <ion-content scroll="true" style="height: calc(100% - 100px);" id="new_lead" padding="true">
-    <ng-form role="form" name="forms.leadform" novalidate>
-
-
+    <ng-form role="form" name="forms.leadForm" novalidate>
       <fancy-select class="fancy-select text-right" header-text="בחר סוג ליד" items="typesByFormType" value="lead.LEAD_TYPE" value-property="TYPE" text-property="DESCRIPTION" allow-empty='false' text="בחרו סוג ליד" not-img-class="hidden" note-text=" : סוג ליד "
         value-changed="onValueChanged(value)" get-custom-text="getCustomText(value)" note-img-class="icon ion-android-checkmark-circle" item-class="text-right pele_rtl">
       </fancy-select>
-
       <label ng-show="submitted && !lead.LEAD_TYPE" class="item no-border input-error text-right">
           נא בחר סוג ליד
       </label>
@@ -38,7 +35,7 @@
               <span class="input-label">* שם פרטי</span>
               <input type="text" name="FIRST_NAME"  ng-model="lead.FIRST_NAME" required>
             </label>
-        <label ng-show="forms.leadform.FIRST_NAME.$invalid && (forms.leadform.FIRST_NAME.$dirty || submitted)" class="item no-border input-error">
+        <label ng-show="forms.leadForm.FIRST_NAME.$invalid && (forms.leadForm.FIRST_NAME.$dirty || submitted)" class="item no-border input-error">
               יש להזין שם פרטי
               </label>
 
@@ -46,7 +43,7 @@
                 <span class="input-label">* שם משפחה</span>
                 <input type="text"  name="LAST_NAME"  ng-model="lead.LAST_NAME" required>
               </label>
-        <label ng-show="forms.leadform.LAST_NAME.$invalid && (forms.leadform.LAST_NAME.$dirty || submitted)" class="item no-border input-error">
+        <label ng-show="forms.leadForm.LAST_NAME.$invalid && (forms.leadForm.LAST_NAME.$dirty || submitted)" class="item no-border input-error">
                   יש להזין שם משפחה
               </label>
 
@@ -54,7 +51,7 @@
                 <span class="input-label">* מס טלפון לחזרה</span>
                 <input type="tel"  name="PHONE_NO_1"  ng-model="lead.PHONE_NO_1" required ng-pattern="/^05\d-?[0-9]{1}-?[0-9]{2}-?[0-9]{4}$/">
               </label>
-        <label ng-show="forms.leadform.PHONE_NO_1.$invalid &&  (forms.leadform.PHONE_NO_1.$dirty  || submitted)" class="item no-border input-error">
+        <label ng-show="forms.leadForm.PHONE_NO_1.$invalid &&  (forms.leadForm.PHONE_NO_1.$dirty  || submitted)" class="item no-border input-error">
                 יש להזין מס' סלולארי תקין
              </label>
 
@@ -62,14 +59,14 @@
                 <span class="input-label">מספר טלפון נוסף</span>
                 <input type="tel" name="PHONE_NO_2" ng-model="lead.PHONE_NO_2" ng-pattern="/^0[0-9]{2}-?[0-9]{1}-?[0-9]{2}-?[0-9]{3,4}$/">
               </label>
-        <label ng-show="forms.leadform.PHONE_NO_2.$invalid && (forms.leadform.PHONE_NO_2.$dirty  || submitted)" class="item no-border  input-error">
+        <label ng-show="forms.leadForm.PHONE_NO_2.$invalid && (forms.leadForm.PHONE_NO_2.$dirty  || submitted)" class="item no-border  input-error">
                 יש להזין מס' נוסף תקין
               </label>
         <label class="item no-border item-input">
               <span class="input-label">ת.ז לקוח</span>
               <input type="number" name="CUSTOMER_ID" ng-model="lead.CUSTOMER_ID" ng-pattern="/^[0-9]{8,9}$/">
             </label>
-        <label ng-show="forms.leadform.CUSTOMER_ID.$invalid && (forms.leadform.CUSTOMER_ID.$dirty  || submitted)" class="item no-border  input-error">
+        <label ng-show="forms.leadForm.CUSTOMER_ID.$invalid && (forms.leadForm.CUSTOMER_ID.$dirty  || submitted)" class="item no-border  input-error">
               יש להזין מס' תקין'
               </label>
         <label class="no-border margin-top-10">
@@ -94,7 +91,7 @@
               </tr>
             </table>
             </label>
-        <label ng-show="(forms.leadform.to_hour.$invalid || forms.leadform.from_hour.$invalid) &&  (forms.leadform.from_hour.$dirty  || forms.leadform.to_hour.$dirty || submitted)" class="item no-border input-error">
+        <label ng-show="(forms.leadForm.to_hour.$invalid || forms.leadForm.from_hour.$invalid) &&  (forms.leadForm.from_hour.$dirty  || forms.leadForm.to_hour.$dirty || submitted)" class="item no-border input-error">
               נא סמנו שעות רצויות  לחזרה
             </label>
 
@@ -113,7 +110,7 @@
 
 
         </label>
-        <label ng-show="forms.leadform.PROACTIVE_IND.$invalid &&  (forms.leadform.PROACTIVE_IND.$dirty  || submitted)" class="item no-border input-error">
+        <label ng-show="forms.leadForm.PROACTIVE_IND.$invalid &&  (forms.leadForm.PROACTIVE_IND.$dirty  || submitted)" class="item no-border input-error">
              נא סמנו
        </label>
 
