--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -9,7 +9,12 @@
     </div>
   </ion-nav-title>
   <ion-content scroll="true" style="height: calc(100% - 100px);" id="new_lead" padding="true">
-    <ng-form role="form" name="forms.leadForm" novalidate>
+    <div ng-show="leadSuccess" class="lead-success text-center">
+      <img src="img/new_icons/vi.png">
+      <h1>ליד נוצר בהצלחה </h1>
+      <h2>תודה רבה </h2>
+    </div>
+    <ng-form ng-show="!leadSuccess" role="form" name="forms.leadForm" novalidate>
       <fancy-select class="fancy-select text-right" header-text="בחר סוג ליד" items="typesByFormType" value="lead.LEAD_TYPE" value-property="TYPE" text-property="DESCRIPTION" allow-empty='false' text="בחרו סוג ליד" not-img-class="hidden" note-text=" : סוג ליד "
         value-changed="onValueChanged(value)" get-custom-text="getCustomText(value)" note-img-class="icon ion-android-checkmark-circle" item-class="text-right pele_rtl">
       </fancy-select>
@@ -27,9 +32,9 @@
       </label>
       <label class="pele_rtl item-text-wrap"><small>** ליד עצמי לא יעבור להמשך טיפול אצל הגורמים השונים בפלאפון</small>
       </label-->
-      <a href="#" style="margin-top:7px;margin-left:7px" class="fab" ng-click="openModal()">
+      <!--a href="#" style="margin-top:7px;margin-left:7px" class="fab" ng-click="openModal()">
               <i class="icon ion-upload icon-center"></i>
-      </a>
+      </a-->
       <div class="list lead-form pele_rtl text-right">
         <label class="item no-border item-input">
               <span class="input-label">* שם פרטי</span>
@@ -64,7 +69,7 @@
               </label>
         <label class="item no-border item-input">
               <span class="input-label">ת.ז לקוח</span>
-              <input type="number" name="CUSTOMER_ID" ng-model="lead.CUSTOMER_ID" ng-pattern="/^[0-9]{8,9}$/">
+              <input type="tel" name="CUSTOMER_ID" ng-model="lead.CUSTOMER_ID" ng-pattern="/^[0-9]{8,9}$/">
             </label>
         <label ng-show="forms.leadForm.CUSTOMER_ID.$invalid && (forms.leadForm.CUSTOMER_ID.$dirty  || submitted)" class="item no-border  input-error">
               יש להזין מס' תקין'
@@ -125,19 +130,17 @@
         <ng-include style="background:#CCC" src="'app/apps/leads/extra.html'"></ng-include>
         <label class="item no-border item-input item-text-wrap margin-top-10">
               <span class="input-label">פרטי הבקשה</span>
-
             </label>
         <label class="item no-border item-input item-text-wrap">
             <textarea class="ion-item item item-text-wrap" ng-model="lead.NOTE"></textarea>
         </label>
       </div>
-
     </ng-form>
   </ion-content>
-  <div style="" class="bar bar-footer bar-clean">
-    <a class="button button-block  button-positive icon-right ion-paper-airplane" ng-show="!lead.LEAD_ID" ng-click="submit()" class="title">פתיחת ליד</a>
-    <a class="button button-block  button-balanced icon-right ion-document-text" ng-show="lead.LEAD_ID" ng-click="submit()" class="title">עדכן ליד עצמי</a>
-    <a class="button button-block  button-danger icon-right ion-document-text" ng-show="lead.LEAD_ID" ng-click="delete(lead.LEAD_ID)" class="title">מחק ליד עצמי</a>
+  <div ng-show="!leadSuccess" style="" class="lead-footer bar bar-footer bar-positive">
+    <a class="button  button-clear icon-right ion-paper-airplane" ng-show="lead.LEAD_ID" ng-click="submit()" class="title"> שמור </a>
+    <!--a class="button icon-right ion-document-text" ng-show="lead.LEAD_ID" ng-click="submit()" class="title">עדכן ליד עצמי</a-->
+    <a class="button button-clear icon-right ion-paperclip" ng-show="uploadRequired" ng-click="openModal()" class="title"> <span class="pel-badge">3</span> צרף מסמכים </a>
   </div>
 
   <script id="upload.html" type="text/ng-template">
@@ -198,12 +201,12 @@
             <a class="text-center white" ng-click="uploadFile()"><i class="icon ion-paper-airplane icon-lg icon-top"></i> שלח</a>
           </div>
         </div>
-        <div><span class="progress" ng-show="uploadState.progress >= 0">
-            <div style="width:{{uploadState.progress}}%" ng-bind="uploadState.progress + '%'"></div>
-        </span>
-        </div>
-        <div>
-          <span ng-show="uploadState.success">Upload Successful</span>
+
+
+        <div ng-show="uploadState.success" class="upload-success text-center">
+          <img src="img/new_icons/vi.png">
+          <h2>הקובץ הועלה בהצלחה </h2>
+          <h3>נא המשך להעלות קבצים נוספים או חזור לטופס הליד</h3>
         </div>
         <div><span class="err" ng-show="uploadState.error">Upload failed</span></div>
       </ion-content>
