--- a/www/app/apps/leads/extra.html
+++ b/www/app/apps/leads/extra.html
@@ -1,32 +1,32 @@
 <ng-form name="attributes">
   <div ng-repeat="e in extraSchema">
+    <div ng-show="e.type=='link'" class="item no-border item-input item-text-wrap">
+      <span class="input-label"><span ng-show="e.required">*</span> {{e.label}} </span>
+      <a href="#" ng-click="openLink(e)">קישור</a>
+    </div>
     <ng-switch on="e.type">
-      <label class="item no-border item-input">
-      <span class="input-label"><span ng-show="e.required">*</span> {{e.label}}</span>
+      <label class="item no-border item-input item-text-wrap">
+      <span  ng-show="!(e.type=='html' || e.type=='link')" class="input-label"><span ng-show="e.required">*</span> {{e.label}} </span>
       <input name="{{e.attribute_name}}" ng-switch-when="text" type="text" ng-model="lead.ATTRIBUTES[e.attribute_name]" ng-required="e.required">
       <input name="{{e.attribute_name}}" ng-switch-when="date" type="date" ng-model="lead.ATTRIBUTES[e.attribute_name]" ng-required="e.required" min="{{e.computedMin}}" max="{{e.computedMax}}">
       <input name="{{e.attribute_name}}" ng-switch-when="number" type="number" ng-model="lead.ATTRIBUTES[e.attribute_name]"  ng-required="e.required">
+      <input name="{{e.attribute_name}}" ng-switch-when="int" type="number" ng-model="lead.ATTRIBUTES[e.attribute_name]"  min="{{e.min}}" max="{{e.max}}" step="1" ng-min="e.min" ng-max="e.max" ng-required="e.required">
       <select class="select" name="{{e.attribute_name}}" ng-switch-when="select" class="form-control" ng-model="e.value" ng-required="e.required">
          <option ng-if="option.k != undefined" ng-repeat="option in e.options" value="{{option.k}}">{{option.v}}</option>
          <option ng-if="option.k == undefined" ng-repeat="option in e.options" value="{{option}}">{{option}}</option>
 			</select>
-      <fieldset ng-switch-when="radio" ng-required="e.required">
-        <span class="input-label">* {{e.label}}</span>
-        <label ng-repeat="option in e.options">
-				 <input name="{{e.attribute_name}}" type="radio" ng-model="e.value" value="{{e.k}}"> {{option.v}}
-			  </label>
-      </fieldset>
-      <fieldset ng-switch-when="checkbox">
-        <label>
-         <input name="{{e.attribute_name}}" type="checkbox" ng-model="e.value[tokenize(option.name)]" value="{{option.value}}" ng-required="e.required"> {{option.name}} &nbsp;
-      </label>
-      </fieldset>
+      <label ng-switch-when="checkbox" class="toggle toggle-positive">
+               <input type="checkbox" name="{{e.attribute_name}}" ng-model="lead.ATTRIBUTES[e.attribute_name]" ng-true-value="{{e.trueValue}}" ng-false-value="{{e.falseValue}}" ng-required="e.required">
+               <div class="track">
+                 <div class="handle"></div>
+               </div>
+     </label>
       <fieldset ng-switch-when="checkboxes">
         <label ng-repeat="option in e.options">
 			   <input name="{{e.attribute_name}}" type="checkbox" ng-model="e.value[tokenize(option.name)]" value="{{option.value}}" ng-required="e.required"> {{option.name}} &nbsp;
 			</label>
       </fieldset>
-      <div ng-switch-when="html" type="text" ng-bind-html="e.html">{{e.html}}</div>
+
       </label>
       <label ng-switch-when="textarea" class="item no-border item-input item-text-wrap">
         <textarea name="{{e.attribute_name}}"  rows="e.rows" cols="e.cols" ng-model="lead.ATTRIBUTES[e.attribute_name]" ng-required="e.required"></textarea>
