--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -8,7 +8,7 @@
       </div>
     </div>
   </ion-nav-title>
-  <ion-content scroll="true" style="height: calc(100% - 100px);" id="new_lead" padding="true">
+  <ion-content scroll="true" style="height: calc(100% - 100px);" id="new_lead" padding="true" delegate-handle="mainContent">
     <div ng-show="leadSuccess" class="lead-success text-center">
       <img src="img/new_icons/vi.png">
       <h1>ליד נשמר בהצלחה </h1>
