--- a/www/app/apps/leads/menu.html
+++ b/www/app/apps/leads/menu.html
@@ -33,7 +33,7 @@
   <ion-modal-view class="">
     <ion-header-bar class="bar bar-header bar-positive">
       <h1 class="title">מידע נוסף</h1>
-      <button ng-click="closeModal()" class="button button-icon ion-close-circled"></button>
+      <button ng-click="closeModal()" class="button button-icon ion-arrow-down-b"></button>
     </ion-header-bar>
     <ion-content ng-show="info" ng-bind-html="info" class="pele_rtl">
     </ion-content>
