--- a/www/app/apps/dev/devmenu.html
+++ b/www/app/apps/dev/devmenu.html
@@ -11,7 +11,7 @@
   <ion-content class="pele-background">
     <div class="list">
       <a class="item  item-icon-right" ui-sref="app.dev.network">
-          <i class="icon ion-trash-b"></i>
+          <i class="icon ion-network-b"></i>
       </a>
       <a class="item pele_rtl">LocalStorage usage :  {{getLocalStorageUsage().mb}} MB  <br \>
       largest - {{getLocalStorageUsage().largetKey}} :  {{getLocalStorageUsage().maxSize}}</a>
