--- a/www/app/apps/leads/report.html
+++ b/www/app/apps/leads/report.html
@@ -15,7 +15,7 @@
       </ion-item>
     </ion-list>
     <ion-list ng-if="type=='T'" class="pele_rtl text-right">
-      <ion-item ng-repeat="l in leads.DATA">
+      <ion-item ng-repeat="l in leads">
         <div class="row">
           <div class="col text-right"><span class="pel-badge">{{$index+1}}</span> <strong>שם לקוח :</strong> {{l.CUSTOMER_NAME}}</div>
         </div>
