--- a/www/app/apps/leads/report.html
+++ b/www/app/apps/leads/report.html
@@ -2,6 +2,9 @@
   <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
+  <ion-nav-buttons side="left">
+    <button ui-sref="app.leads" class="button button-icon icon ion-arrow-left-a"></button>
+  </ion-nav-buttons>
   <ion-nav-title>
     <div class="bar bar-header bar-positive">
       <div class="title">{{title}}
