--- a/www/app/apps/leads/extra.html
+++ b/www/app/apps/leads/extra.html
@@ -16,7 +16,7 @@
       <input date-input  ng-switch-when="date" name="{{e.attribute_name}}" type="date"  ng-model="lead.ATTRIBUTES[e.attribute_name]"  ng-required="e.required" min="{{e.computedMin}}" max="{{e.computedMax}}" ng-disabled="e.disabled">
       <input name="{{e.attribute_name}}" ng-switch-when="number" type="number" ng-model="lead.ATTRIBUTES[e.attribute_name]"  ng-required="e.required">
       <input name="{{e.attribute_name}}" ng-switch-when="int" type="number" ng-model="lead.ATTRIBUTES[e.attribute_name]"  min="{{e.min}}" max="{{e.max}}" step="1" ng-min="e.min" ng-max="e.max" ng-required="e.required">
-      <select class="select" name="{{e.attribute_name}}" ng-switch-when="select" class="form-control" ng-model="e.value" ng-required="e.required">
+      <select class="select" name="{{e.attribute_name}}" ng-switch-when="select" class="form-control" ng-model="lead.ATTRIBUTES[e.attribute_name]" ng-required="e.required">
          <option ng-if="option.k != undefined" ng-repeat="option in e.options" value="{{option.k}}">{{option.v}}</option>
          <option ng-if="option.k == undefined" ng-repeat="option in e.options" value="{{option}}">{{option}}</option>
 			</select>
