--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
   <!--script src="lib/sweetalert.min.js"></script-->
 
   <script src="lib/sweetalert2.all.min.js"></script>
+  <script src="lib/angular-idle.min.js"></script>
 
   <!-- your app's js -->
   <script src="app/app.js"></script>
